Acommodate review comments and some leftover comments